# EIEIO

./: .gitignore  EIEIO software stack.graffle  poetry.toml  pyproject.toml  requirements.txt
drawing/: spectral.py
eieio/cli_tools/: measure.py  measure_tests.py
eieio/cli_tools/tests/: calibrate_connectivity_test.zsh  just_calibration.sis
eieio/data/: minolta_simulated_responses.txt  sample_spectral_radiance_measurement.xml
eieio/drawing/: spectral.py
eieio/measurement/: colorimetry.py  eieio.toml  instructions.py  log.py  measure.py  measurement.py  measurement_group.py  old_colorimetry.py  session.py  tristim_colorimetry.py
eieio/measurement/cli_tools/: measure.py  merge_colx_into_spdx.py
eieio/measurement/tests/: KRGBYCMW_instructions.toml  instructions_tests.py  test_colorimetry.py  test_instructions.py  test_measurement.py  test_measurement_group.py  test_old_colorimetry.py  test_session.py
eieio/measurement/tests/resources/: KRGBYCMW_instructions.toml  oneframe.toml
eieio/meter/: meter_abstractions.py  meter_errors.py
eieio/meter/minolta/: cs2000.py  test_cs2000.py
eieio/meter/sekonic/: sekonic.py  wpd_node.js
eieio/meter/tests/: test_tristimulus_colorimetry.py
eieio/meter/xrite/: i1ProAdapterModule.c  i1pro.py  setup.cfg  setup.py
eieio/meter/xrite/cli_tools/: exercise_connected_i1Pro.py
eieio/meter/xrite/doc/: i1pro3 vs minolta.xlsx
eieio/targets/: target_abstractions.py
eieio/targets/grpc_based/: grpc_target.py  target_color_changing_client.py
eieio/targets/resolve/: resolve_target.py
eieio/targets/unreal/: live_link_target.py  message_retransmitting_thread.py  unreal_live_link_target.py  web_control_api_target.py
measurement/: sample_id_sequence.py  session.py  tristim_colorimetry.py
meter/: i1ProAdapterModule.c  i1pro.py  log.py  meter.py  meter_abstractions.py  setup.py
meter/sekonic/: Makefile  run_wpd_as_batch_process.js  sekonic.py  wpd_node.js
meter/sekonic/wpd_params/: sekonic_works_nicely.json
meter/src/: i1ProAdapterModule.c  setup.py
meter/tests/: test_session.py  test_tristimulus_colorimetry.py  toyMeasurementLoop.py
meter/xrite/: i1ProAdapterModule.c  i1pro.py  setup.py
meter/xrite/cli_tools/: exercise_connected_i1Pro.py
services/: ports.py
services/metering/: MeteringServer.py  metering_test_client.py  server.py
services/metering/tests/: metering_test_client.py
services/protobufs/: metering.proto  target.proto  targetColorChanging.proto
services/targetColorChanging/: nuke_target_color_changing_server.nk  nuke_target_color_changing_server.py  targetColorChangingServer.py  target_color_changing_client.py  target_color_changing_test_client.py
utilities/: english.py  log.py
