[tool.poetry]
name = "eieio"
version = "0.1.2"
description = "Extensible Imaging Equipment I/O (EIEIO)"
license = "BSD-3-Clause"
authors = [ "Joseph Goldstone <jgoldstone@arri.com>" ]
maintainers = [ "Joseph Goldstone <jgoldstone@arri.com>" ]
# readme = 'README.rst'
keywords = [
    "eieio",
    "data",
    "dataset",
    "datasets",
    "python",
    "spectral-data",
    "spectral-dataset",
    "spectral-datasets"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = "^3.9"
imageio = "*"
colour = { path = "/usr/local/repos/git/colour-science/colour", develop = true }
colour-datasets = { path = "/usr/local/repos/git/colour-science/colour-datasets", develop = true }
protobuf = "^3.15.8"

[tool.poetry.dev-dependencies]
biblib-simple = "*"
coverage = "*"
coveralls = "*"
flake8 = "*"
invoke = "*"
jupyter = "*"
mock = "*"
nose = "*"
pre-commit = "*"
pytest = "*"
restructuredtext-lint = "*"
sphinx = "<=3.1.2"
sphinx_rtd_theme = "*"
sphinxcontrib-bibtex = "<2.0.0"
toml = "*"
tqdm = "*"
twine = "*"
yapf = "0.23"

[tool.poetry.extras]
development = [
    "biblib-simple",
    "coverage",
    "coveralls",
    "flake8",
    "invoke",
    "jupyter",
    "mock",
    "nose",
    "pre-commit",
    "pytest",
    "restructuredtext-lint",
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-bibtex",
    "toml",
    "twine",
    "yapf"
]
graphviz = [ "pygraphviz" ]
optional = [ "networkx", "pandas", "tqdm" ]
plotting = [ "matplotlib" ]
read-the-docs = [
    "mock",
    "networkx",
    "numpy",
    "pygraphviz",
    "sphinxcontrib-bibtex"
]

[build-system]
requires = [ "poetry>=0.12" ]
build-backend = "poetry.masonry.api"
